fix(core): 🐛 Fix section collapsing not functioning on Firefox

--- a/resources/skins.citizen.styles/components/Sections.less
+++ b/resources/skins.citizen.styles/components/Sections.less
@@ -34,7 +34,7 @@
 			}
 		}
 
-		&:has( + .citizen-section[ hidden='until-found' ] ) {
+		&:has( + .citizen-section[ hidden ] ) {
 			.citizen-section-indicator {
 				transform: rotate3d( 1, 0, 0, 180deg );
 			}
